<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginTop="45sp"
                    android:textSize="35sp"
                    android:fontFamily="@font/fontbold"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1" />

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/fontregular"/>

        <EditText
            android:id="@+id/addemaillogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=" Enter your email"
            android:layout_marginTop="6dp"
            android:background="@drawable/bntinput"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/fontregular"/>

        <EditText
            android:id="@+id/addpasswordlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=" Enter your passwrod"
            android:layout_marginTop="6dp"
            android:background="@drawable/bntinput"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/fontregular"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="305dp"
            android:layout_height="47dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_rectangle_blue"
            android:onClick="tekanlogin"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="145dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/fontregular"/>

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="305dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:text="@string/google"
            android:textColor="@color/black"
            android:background="@drawable/btngoogle"/>


        <Button
            android:id="@+id/btnfb"
            android:layout_width="305dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:text="@string/fb"
            android:textColor="@color/black"
            android:background="@drawable/btnfb"/>

        <TextView
            android:id="@+id/btnRegis"
            android:onClick="ulangregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/havet_account"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/fontregular"/>

    </LinearLayout>

</LinearLayout>